Migrate some unit tests to Junit Jupiter
I really like `assertLinesMatch()` for long text output.